# warehouse_project

./: __freq_cmds  __git_commit_progress  progress_todo.md
__debug logs/: __debugAttachService_op  __lo_op  __pp_op  real__pp_op
attach_shelf/: CMakeLists.txt  package.xml
attach_shelf/include/attach_shelf/: utils.hpp
attach_shelf/launch/: attach_to_shelf.launch.py  pre_approach.launch.xml  test_tf_detect.launch.py
attach_shelf/rviz/: warehouse_rb1.rviz
attach_shelf/src/: __tmp.cpp  _approach_service_server.cpp  _approach_service_server[working fine].cpp  approach_service_server copy.cpp  approach_service_server.cpp  pre_approach.cpp  pre_approach_v2.cpp  tf_align_testing.cpp  utils.cpp
cartographer_slam/: package.xml  setup.py
cartographer_slam/config/: cartographer_sim.lua  warehouse_map_real.pgm  warehouse_map_real.yaml  warehouse_map_real_05.pgm  warehouse_map_real_05.yaml  warehouse_map_sim.pgm  warehouse_map_sim.yaml
cartographer_slam/launch/: cartographer.launch.py
cartographer_slam/resource/: frames_2025-10-18_07.02.51.gv
cartographer_slam/rviz/: mapping.rviz
frame_views/real/: fl_frames_2025-11-26_17.29.05.gv  jus_real_frames_2025-11-25_11.22.45.gv  l_frames_2025-11-26_08.10.05.gv  p_frames_2025-11-26_08.10.56.gv
frame_views/sim/: full_loaded_sim_frames_2025-11-26_06.35.01.gv  jus_sim_frames_2025-11-26_06.20.29.gv  l_frames_2025-11-26_06.24.11.gv  p_frames_2025-11-26_06.25.11.gv
localization_server/: package.xml  setup.py
localization_server/config/: amcl_config_real.yaml  amcl_config_sim.yaml
localization_server/launch/: localization.launch copy.py  localization.launch.py
localization_server/localization_server/: initial_pose_pub.py
localization_server/resource/: real frames_2025-11-03_08.09.41.gv  sim frames_2025-11-03_08.28.20.gv
localization_server/rviz/: localization.rviz  real.rviz
map_server/: package.xml  setup.py
map_server/config/: warehouse_map_keepout_real.pgm  warehouse_map_keepout_real.yaml  warehouse_map_keepout_sim.pgm  warehouse_map_keepout_sim.yaml  warehouse_map_real.yaml  warehouse_map_sim.pgm  warehouse_map_sim.yaml  warehouse_map_sim_ascii.pgm  warehouse_map_sim_modified.pgm
map_server/launch/: map_server.launch.py
map_server/resource/: frames_2025-10-20_04.19.02.gv  frames_2025-10-25_04.44.39.gv
map_server/rviz/: 3rd_prsn_view.rviz  map_display.rviz
nav2_apps/: package.xml  setup.py
nav2_apps/nav2_scripts/: _move_shelf_to_ship.py  _move_shelf_to_ship_real.py  manual_movement.py  move_shelf copy.py  move_shelf.py  move_shelf_to_ship.py  move_shelf_to_ship_real.py  odom_listener.py  tmp.py
nav2_apps/scripts/: move_shelf_to_ship.py
path_planner_server/: package.xml  setup.py
path_planner_server/config/: bt_navigator.yaml  bt_navigator_real.yaml  bt_navigator_sim.yaml  controller.yaml  controller_real.yaml  controller_sim.yaml  filters_real.yaml  planner_real.yaml  planner_server.yaml  planner_sim.yaml  recoveries_real.yaml
path_planner_server/launch/: ___pathplanner.launch.py  __template_launch.py  pathplanner.launch copy.py  pathplanner.launch.py
path_planner_server/rviz/: pathplanning.rviz  pathplanning_3rd_prsn.rviz
robot_config/: CMakeLists.txt  package.xml
robot_config/config/: real.yaml  sim.yaml
